# housebot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.deployment-bot  Dockerfile.sandboxd  README.md  docker-compose.dev.yml  docker-compose.polyglot.yml  docker-compose.yml  main.py  pyproject.toml
.github/agents/: catalog.json  common.sh  run-claude.sh  run-codex.sh  run-opencode.sh
.github/workflows/: agent-label-sync.yml  check-agent-runner.yml  claude-dispatch.yml  codex-dispatch.yml  deploy-homelab.yml  deployment-bot-publish.yml  develop-feature.yml  docker-publish.yml  fuzz.yml  implement-feature.yml  macos-build.yml  opencode-comment.yml  opencode-dispatch.yml  opencode-pr.yml  opencode.yml  pr-notify.yml  rollback.yml  test.yml
assets/fonts/: OFL.txt
crates/bot-commands/: Cargo.toml
crates/bot-commands/src/: lib.rs
crates/bot-config/: Cargo.toml
crates/bot-config/src/: lib.rs
crates/bot-formatting/: Cargo.toml
crates/bot-formatting/src/: lib.rs
crates/bot-response/: Cargo.toml
crates/channel-log/: Cargo.toml
crates/channel-log/src/: lib.rs
crates/coding-agent/: Cargo.toml
crates/coding-agent/src/: catalog.rs  dev_notify.rs  issue.rs  lib.rs  pending.rs  pending_tests.rs
crates/common-crawl/: Cargo.toml
crates/common-crawl/src/: lib.rs
crates/common-crawl/tests/: http.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/deployment-bot/: Cargo.toml
crates/deployment-bot/src/: docker.rs  handler.rs  lib.rs  lib_tests.rs  main.rs  permissions.rs
crates/deployment-bot/tests/: deploy.rs
crates/discord-bridge/: Cargo.toml
crates/discord-bridge/src/: lib.rs
crates/github-issues/: Cargo.toml
crates/github-issues/src/: lib.rs
crates/graph-render/: Cargo.toml
crates/graph-render/src/: lib.rs
crates/graph-render/tests/: render.rs
crates/grocery/: Cargo.toml
crates/history/: Cargo.toml
crates/history/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm-queue/: Cargo.toml
crates/llm-queue/src/: lib.rs
crates/llm/src/: lib.rs
crates/llm/tests/: thinking_mode.rs
crates/lua-engine/: Cargo.toml
crates/lua-engine/src/: lib.rs  tests.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/message-log/: Cargo.toml
crates/message-log/src/: lib.rs
crates/notes/: Cargo.toml
crates/notes/src/: lib.rs
crates/profile/: Cargo.toml
crates/rate-limit/: Cargo.toml
crates/reminders/: Cargo.toml
crates/sandbox/: Cargo.toml
crates/sandbox/docker/: Dockerfile  entrypoint.sh
crates/sandbox/src/: client.rs  docker.rs  lib.rs  limits.rs  protocol.rs  server.rs  validation.rs
crates/sandbox/tests/: docker_tests.rs  integration_tests.rs  protocol_tests.rs
crates/skills/: Cargo.toml
crates/skills/src/: lib.rs
crates/testing/: Cargo.toml
crates/token-monitor/: Cargo.toml
crates/token-monitor/src/: lib.rs  tests.rs
crates/tool-permissions/: Cargo.toml
crates/tool-permissions/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: common_crawl.rs  create_skill.rs  edit_feature_request.rs  feature_development.rs  feature_development_tests.rs  feature_request.rs  features.rs  file_download.rs  github_api.rs  lib.rs  manage_skills.rs  osm.rs  remind.rs  sandbox.rs  searxng.rs  summarize_url.rs  token_metrics.rs  translate.rs  web_fetch.rs
db/migrations/: 001_create_user_memories.sql  002_create_token_monitor.sql  003_create_bot_config.sql  004_create_deployment_permissions.sql
docs/: automated-development.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: extract_code_files.rs  redact.rs  split_text.rs  strip_code_fence.rs  tool_hint_status.rs
sandbox/: Dockerfile  entrypoint.sh  nginx.conf  server.py  start.sh
scripts/: build-binary.sh  build-image.sh  deploy.sh  dev-up.sh  health_check.sh  rollback.sh
services/agent/: Dockerfile  agent.cabal
services/agent/src/: Agent.hs  Config.hs  LlmClient.hs  Main.hs  Storage.hs  Types.hs
services/discord-gateway/: Dockerfile  go.mod  go.sum  main.go
services/github-issues/: CMakeLists.txt  Dockerfile  main.cpp
services/llm-client/: Cargo.toml  Dockerfile
services/mcp-proxy/: Dockerfile  mcp_proxy.c
services/reminders/: Dockerfile  nginx.conf
services/storage/: Dockerfile  Gemfile  app.rb
src/: agent.py  agent.rs  bot.py  bot.rs  bot_commands.rs  bot_config.rs  bot_formatting.rs  bot_response.rs  channel_log.rs  config.rs  database.rs  deployment_bot.rs  discord_bridge.rs  github_issues.py  github_issues.rs  graph_render.rs  grocery.rs  grocery_list.rs  history.py  history.rs  lib.rs  llm.rs  llm_queue.rs  lua_engine.rs  lua_engine_tests.rs  lua_sandbox.rs  main.rs  mcp.rs  memory.py  memory.rs  message_log.rs  notes.py  notes.rs  profile.rs  reminders.py  reminders.rs  skills.py  skills.rs  testing.rs  token_monitor.rs  (+1 more)
src/agent/: dispatch.rs  leaderboard_fmt.rs  lua.rs  mod.rs  prompt.rs  run.rs  session.rs  tests.rs  tests_run.rs  tools_def.rs
src/bot/: bot_tests.rs  command_defs.rs  config_cmd.rs  develop.rs  develop_actions.rs  develop_component.rs  emoji_reactions.rs  github_cmd.rs  handler.rs  helpers.rs  interactions.rs  lua_cmd.rs  media.rs  message_flow.rs  mod.rs  progress.rs  render.rs
src/coding_agent/: catalog.rs  issue.rs  pending.rs
src/token_monitor/: leaderboard.rs  mod.rs  tests.rs
src/tools/: claude_code.py  common_crawl.rs  duckduckgo.rs  edit_feature_request.rs  feature_development.rs  feature_development_tests.rs  feature_request.py  feature_request.rs  features.rs  file_download.rs  github_api.rs  image_generation.rs  mod.rs  opencode.py  opencode.rs  ping_user.rs  ping_users.rs  remind.py  remind.rs  sandbox.rs  searxng.rs  summarize_url.py  summarize_url.rs  token_metrics.rs  translate.py  translate.rs  web_fetch.rs
tests/: public_api.rs  test_agent.py  test_bot.py  test_feature_request.py  test_github_issues.py  test_history.py  test_memory.py  test_new_tools.py  test_notes.py  test_opencode.py  test_reminders.py  test_skills.py
(+12 files in other folders)
