[package]
name = "housebot"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "House chatbot with Discord interface and MCP tools (Rust rewrite)"
license = "AGPL-3.0-or-later"

[workspace]
members = ["crates/common-crawl", "crates/deployment-bot"]
resolver = "2"

[[bin]]
name = "housebot"
path = "src/main.rs"

[lib]
name = "housebot"
path = "src/lib.rs"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
base64 = "0.22"
futures-util = "0.3"
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry = { version = "0.38.0", default-features = false, features = [
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "release-health",
    "reqwest",
    "rustls",
] }
bytes = "1"
sha2 = "0.10"
common-crawl = { path = "crates/common-crawl" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
