[package]
name = "housebot"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "House chatbot with Discord interface and MCP tools (Rust rewrite)"
license = "AGPL-3.0-or-later"

[workspace]
members = [
    "crates/bot-commands",
    "crates/bot-config",
    "crates/bot-formatting",
    "crates/bot-response",
    "crates/channel-log",
    "crates/coding-agent",
    "crates/common-crawl",
    "crates/config",
    "crates/database",
    "crates/deployment-bot",
    "crates/discord-bridge",
    "crates/github-issues",
    "crates/graph-render",
    "crates/grocery",
    "crates/history",
    "crates/llm",
    "crates/llm-queue",
    "crates/lua-engine",
    "crates/mcp",
    "crates/memory",
    "crates/message-log",
    "crates/notes",
    "crates/profile",
    "crates/rate-limit",
    "crates/reminders",
    "crates/sandbox",
    "crates/skills",
    "crates/testing",
    "crates/token-monitor",
    "crates/tool-permissions",
    "crates/tools",
]
exclude = ["fuzz"]
resolver = "2"

[[bin]]
name = "housebot"
path = "src/main.rs"

[lib]
name = "housebot"
path = "src/lib.rs"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde_json = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry = { version = "0.38.0", default-features = false, features = [
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "release-health",
    "reqwest",
    "rustls",
] }
common-crawl = { path = "crates/common-crawl" }
housebot-bot-commands = { path = "crates/bot-commands" }
housebot-bot-config = { path = "crates/bot-config" }
housebot-bot-formatting = { path = "crates/bot-formatting" }
housebot-bot-response = { path = "crates/bot-response" }
housebot-coding-agent = { path = "crates/coding-agent" }
housebot-discord-bridge = { path = "crates/discord-bridge" }
housebot-github-issues = { path = "crates/github-issues" }
housebot-llm-queue = { path = "crates/llm-queue" }
housebot-lua-engine = { path = "crates/lua-engine" }
housebot-tool-permissions = { path = "crates/tool-permissions" }
housebot-tools = { path = "crates/tools" }
graph-render = { path = "crates/graph-render" }
housebot-channel-log = { path = "crates/channel-log" }
housebot-config = { path = "crates/config" }
housebot-database = { path = "crates/database" }
housebot-grocery = { path = "crates/grocery" }
housebot-history = { path = "crates/history" }
housebot-llm = { path = "crates/llm" }
housebot-mcp = { path = "crates/mcp" }
housebot-memory = { path = "crates/memory" }
housebot-message-log = { path = "crates/message-log" }
housebot-notes = { path = "crates/notes" }
housebot-profile = { path = "crates/profile" }
housebot-rate-limit = { path = "crates/rate-limit" }
housebot-reminders = { path = "crates/reminders" }
housebot-sandbox = { path = "crates/sandbox" }
housebot-skills = { path = "crates/skills" }
housebot-testing = { path = "crates/testing" }
housebot-token-monitor = { path = "crates/token-monitor" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
