[project]
name = "house-chatbot"
version = "0.1.0"
description = "House chatbot with Discord interface, MCP tools, and OpenCode sandbox"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "discord.py>=2.3.2",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "docker>=7.0.0",
    "aiohttp>=3.9.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
house-chatbot = "main:main"
