[package]
name = "housebot-bot-config"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Persisted per-deployment bot configuration"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
housebot-config = { path = "../config" }
housebot-llm = { path = "../llm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "rt"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
