[package]
name = "housebot-coding-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Coding-agent catalog, issue drafting, and pending-dispatch state"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
housebot-config = { path = "../config" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
