[package]
name = "common-crawl"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Client for the Common Crawl CDXJ index API"
license = "AGPL-3.0-or-later"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
