[package]
name = "housebot-discord-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Shared handle for sending Discord messages outside the event loop"
license = "AGPL-3.0-or-later"

[dependencies]
housebot-bot-response = { path = "../bot-response" }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
serde_json = "1"
