[package]
name = "graph-render"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Static PNG rendering for small node/edge graphs"
license = "AGPL-3.0-or-later"

[dependencies]
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "ab_glyph"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
