[package]
name = "housebot-llm-queue"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Shared bounded, priority-aware scheduling for LLM requests"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
async-trait = "0.1"
housebot-llm = { path = "../llm" }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
