[package]
name = "housebot-llm"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Client and types for an OpenAI-compatible chat-completions endpoint"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
