[package]
name = "housebot-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Minimal MCP (Model Context Protocol) client over stdio"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["io-util", "process", "sync", "macros"] }
tracing = "0.1"
