[package]
name = "housebot-memory"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Per-user persistent memory store (PostgreSQL or markdown files)"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
housebot-config = { path = "../config" }
serde_json = "1"
tokio = { version = "1", features = ["fs", "rt"] }
tokio-postgres = "0.7"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
