[package]
name = "housebot-sandbox"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Safe sandbox crate — client protocol + Docker orchestration for disposable code-inspection containers"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "sandboxd"
path = "src/bin/sandboxd.rs"
required-features = []
