[package]
name = "housebot-tool-permissions"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Per-user tool permission grants and approval flow"
license = "AGPL-3.0-or-later"

[dependencies]
housebot-config = { path = "../config" }
housebot-memory = { path = "../memory" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "rt", "sync"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
