cabal-version: 3.0
name: agent
version: 0.1.0.0
build-type: Simple

executable agent
  main-is: Main.hs
  other-modules: Agent, Config, Storage, LlmClient, Types
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
      base ^>=4.18
    , aeson ^>=2.2
    , aeson-pretty ^>=0.8
    , bytestring ^>=0.11
    , containers ^>=0.6
    , http-client ^>=0.7
    , http-client-tls ^>=0.3
    , http-types ^>=0.12
    , mtl ^>=2.3
    , scotty ^>=0.22
    , text ^>=2.0
    , time ^>=1.12
    , unordered-containers ^>=0.2
    , vector ^>=0.13
    , warp ^>=3.3
    , wai ^>=3.2
    , wai-extra ^>=3.1
